Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Account__c.field-meta.xml
<CustomField>
    <fullName>BD_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tender-Bid Payments</relationshipLabel>
    <relationshipName>Tender_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>