Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Amount_of_PBG__c.field-meta.xml
<CustomField>
    <fullName>BD_Amount_of_PBG__c</fullName>
    <label>Amount of PBG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>