Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Bank_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Bank_Reference_Number__c</fullName>
    <label>Bank Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>