Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_BG_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>BD_BG_Valid_Till__c</fullName>
    <label>BG Valid Till</label>
    <type>Date</type>
</CustomField>