Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>BD_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Analytical Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>