Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_DD_Amount__c.field-meta.xml
<CustomField>
    <fullName>BD_DD_Amount__c</fullName>
    <label>DD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>