Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>