Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_In_Favour_Of__c.field-meta.xml
<CustomField>
    <fullName>BD_In_Favour_Of__c</fullName>
    <label>In Favour Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>