Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Instrument_Date__c</fullName>
    <label>Instrument Date</label>
    <type>Date</type>
</CustomField>