Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Issued_Bank__c.field-meta.xml
<CustomField>
    <fullName>BD_Issued_Bank__c</fullName>
    <label>Issued Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>