Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BD_Parent_Opportunity__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tender-Bid Payments</relationshipLabel>
    <relationshipName>Tender_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>