Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Payment_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>BD_Payment_Processed_By__c</fullName>
    <label>Payment Processed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>