Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Payment_Released_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Payment_Released_Date__c</fullName>
    <label>Payment Released Date</label>
    <type>Date</type>
</CustomField>