Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_PBG_Required__c.field-meta.xml
<CustomField>
    <fullName>BD_PBG_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PBG Required?</label>
    <type>Checkbox</type>
</CustomField>