Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_PBG_Required_By_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_PBG_Required_By_Date__c</fullName>
    <label>PBG Required By Date</label>
    <type>Date</type>
</CustomField>