Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Region__c.field-meta.xml
<CustomField>
    <fullName>BD_Region__c</fullName>
    <formula>text(BD_Parent_Opportunity__r.BD_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>