Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Regional_Credit_Collection_Person__c.field-meta.xml
<CustomField>
    <fullName>BD_Regional_Credit_Collection_Person__c</fullName>
    <label>Regional Credit Collection Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>