Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>BD_Swift_Code__c</fullName>
    <label>Swift Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>