Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Tender_Fee__c.field-meta.xml
<CustomField>
    <fullName>BD_Tender_Fee__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <label>Tender-Bid Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>