Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/BD_Tender_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Tender_Number__c</fullName>
    <description>SC-406 Renamed label to Tender-Bid</description>
    <formula>( BD_Parent_Opportunity__r.BD_Tender_Reference_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tender-Bid Number</label>
    <type>Text</type>
</CustomField>