Perkin-UAT/force-app/main/default/objects/BD_Tender_Payment__c/fields/Dx_INDIA_Region__c.field-meta.xml
<CustomField>
    <fullName>Dx_INDIA_Region__c</fullName>
    <formula>BD_Account__r.PKI_SAP_Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dx India Region</label>
    <type>Text</type>
</CustomField>